tests/baselines/reference/unexpectedStatementBlockTerminator.errors.txt
==== tests/cases/compiler/unexpectedStatementBlockTerminator.ts (1 errors) ====
    class Foo {}
    
    class Bar {}
    case
    ~~~~
!!! error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    function Goo() {return {a:1,b:2};}
    